package trainingData;

message Data {
    optional int32 objsizeW = 5;
    optional int32 objsizeH = 4;

    message AvgSize {
        optional int32 avgsizeH = 1;
        optional int32 avgsizeW = 2; 
    }

    message Location {
        repeated float x = 1 [packed=true];
        repeated float y = 2 [packed=true];
    }

    message DictEntry {
        optional int32 filterIndex = 1;
        repeated float patch = 2 [packed=true];
        optional Location location = 3;
        optional int32 patchRo = 4;
        optional int32 patchCo = 5;
        optional int32 imagendx = 6;
    }

    message Filter {
        repeated float filterData = 1 [packed=true];
    }
    
    repeated AvgSize avgsize = 3;
    repeated Filter filters = 2;
    repeated DictEntry dictEntry = 1;
}

message Detector {
    optional int32 objsizeH = 1;
    optional int32 objsizeW = 2;

    message DetectEntry {
        optional float a = 1;
        optional float b = 2;
        optional float th = 3;
        optional int32 bestnode = 4;
        optional int32 featureNdx = 5;
        repeated int32 b0 = 6 [packed=true];
        repeated int32 sharing = 7 [packed=true];
    }

    repeated DetectEntry detectEntry = 3;
}
